# calibrate_expressions_of_certainty

./: .gitignore  README.md  env.yml  setup.cfg  tutorial.ipynb
calibrating_expressions_of_certainty/: calibration.py  evaluate.py  evaluate_qa_correctness.py  evaluate_sciq_verbalized_confidence.py  evaluate_truthfulqa_verbalized_confidence.py  llm_api.py  utils.py
calibrating_expressions_of_certainty/prompts/classify_pathologies_ct/: prompt_detailed_instruct.j2  prompt_detailed_instruct_omit_reference_sent.j2  prompt_detailed_instruct_optimized_chatgpt.j2  prompt_detailed_instruct_optimized_gemini.j2  prompt_simple_instruct.j2
calibrating_expressions_of_certainty/prompts/classify_pathologies_xr/: prompt_detailed_instruct_omit_reference_sent.j2
calibrating_expressions_of_certainty/prompts/llm_calibration/: ask_commonly_used_phrases_and_beta_params.txt  check_answer_equivalence.txt  check_answer_equivalence_multiple_correct.txt  verbconf.txt  verbconfv2.txt  verbconfv3.txt  verbprobtop1.txt
results/gpt-4o-2024-08-06/truthfulqa_p=verbconf_src=prompt:gpt-4o:size=12/: answers.jsonl  answers_eval_correctness.jsonl
scripts/: eval_sciq.sh  eval_truthfulqa.sh
