[metadata]
name = calibrating_expressions_of_certainty
version = 0.0.1
author = Peiqi Wang
author_email = peiqi1122@gmail.com
description = re-usable code snippets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tt6746690/calibrate_expressions_of_certainty/
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .